# melierx-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml
configuration/: base.yaml  production.yaml
migrations/: 20251218143525_create_subscriptions_table.sql  20251227133208_add_status_to_subsciptions.sql  20251227133647_make_status_not_null_in_subscriptions.sql  20251227134005_create_subscription_token_table.sql  20251231020142_create_users_table.sql  20260103060954_seed_user.sql  20260109090352_create_idempotency_table.sql  20260111031945_relax_null_checks_on_idempotency.sql  20260113141157_create_issues_table.sql  20260113141808_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/controllers/: auth.rs  me.rs  mod.rs
src/db/: user.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
