[package]
name = "melierx-backend"
authors = ["Tinnapop Duangtha <tinnapopduangtha@gmail.com>"]
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "melierx-backend"

[dependencies]
actix-web = "4"
chrono = "0.4.42"
claim = "0.5.0"
config = "0.15.19"
fake = "4.4.0"
linkify = "0.10.0"
once_cell = "1.21.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = { version = "0.12.26" , features = ["json", "rustls-tls"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.147"
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.20"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.19.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
wiremock = "0.6.5"

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]
