[package]
name = "melierx-backend"
authors = ["Tinnapop Duangtha <tinnapopduangtha@gmail.com>"]
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "melierx-backend"

[dependencies]
actix-web = "4"
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"]}
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
htmlescape = "0.3.1"
once_cell = "1.21.3"
rand = { version = "0.9.2", features = ["std_rng"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
sha2 = "0.10.9"
thiserror = "2.0.17"
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.20"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
unicode-segmentation = "1.12.0"
urlencoding = "2.1.3"
uuid = { version = "1.19.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }

[dependencies.reqwest]
version = "0.12.26"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
claim = "0.5.0"
fake = "4.4.0"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
serde_json = "1.0.147"
wiremock = "0.6.5"